Fix: Overflow Auto for content > 50vh

--- a/src/components/FAQPage/Accordion/Accordion.scss
+++ b/src/components/FAQPage/Accordion/Accordion.scss
@@ -53,6 +53,7 @@
 
         &-wrap {
             max-height: 0;
+            overflow: auto;
             transition: max-height 0.5s;
             transition-timing-function: ease-out;
             transition-delay: 0;
